<resources>
	<string name="app_name">AndroidTest</string>
	<string name="hint_UserName">UserName</string>
	<string name="hint_Password">Password</string>
    <string name="Login">Login</string>
	<string name="txt_or">OR</string>
    <string name="txt_Register">Register</string>
    <string name="ToolbarTitle">LoginRegister</string>

	<!--hint-->
	<string name="hint_mobile_no">Mobile No</string>
	<string name="hint_verify_otp">Verify Otp</string>
	<string name="hint_first_name">First Name</string>
	<string name="hint_middle_name">Middle Name</string>
	<string name="hint_last_name">Last Name</string>
	<string name="hint_village_name">village</string>
	<string name="hint_date_of_birth">Date Of Birth</string>

	<!--acb label-->
	<string name="acbSendOtp">Send OTP</string>
	<string name="acbCancelOtp">Cancel</string>
	<string name="acbVerifyOtp">Verify</string>
	<string name="acbResendOtp">Resend</string>
	<string name="acbSave">Save</string>
	<string name="acbCancel">Cancel</string>
	<string name="acbAddChildren">Add Children</string>
	<string name="acbAddSpouse">Add Spouse</string>
	<string name="acbAddParent">Add Parent</string>

	<!--Textview-->
	<string name="actvDateOfBirth">Date Of Birth</string>
	<string name="actvName">Name</string>
	<string name="actvAddress">Address</string>
	<string name="actvMobileNo">MobileNo</string>
	<string name="actvVillage">Village</string>
	<string name="actvVerifyBy">Verify By</string>

	<!--Intent Param Sting-->
	<string name="intentParam">MobileNo</string>
	<string name="verificationMessage">Thank You For Your Interest. Waiting For Verification</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="cancel">Cancel</string>
    <string name="internetmsg">Connection not available.Kindly check your connectivity</string>
    <string name="exit">Exit</string>
	<string name="app_id">179981909243751</string>
    <!--String Array for Village-->
	<string-array name="villageArray">
		<item>Choose Village</item>
		<item>Amreli</item>
		<item>Bardoli</item>
		<item>Chanasma</item>
		<item>Dehgam</item>
		<item>Fatehpur</item>
		<item>Halol</item>
		<item>Kalol</item>
		<item>Palanpur</item>
		<item>Mahesana</item>
		<item>Limbli</item>
		<item>Kheralu</item>
		<item>Dang</item>
		<item>Chhota Udepur</item>
		<item>Saputara</item>
		<item>Sola</item>
		<item>Idar</item>
		<item>Kachhchh</item>
	</string-array>

	//callapsing

	<!-- colors -->
	<!-- <color name="primary">#785447</color>
     <color name="primaryDark">#5B3F36</color>-->

	<!-- dimensions -->
	<dimen name="image_width">120dp</dimen>
	<dimen name="image_final_width">32dp</dimen>
	<dimen name="spacing_normal">16dp</dimen>

	<!-- &lt;!&ndash; styles &ndash;&gt;
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primaryDark</item>
     </style>
 -->
	<!-- strings -->

	<string name="quila_name">Quila</string>
	<string name="quila_tagline">I love bones and slippers</string>
	<string name="quila_name2">Quila!</string>
	<string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>

</resources>
