<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/ic_image5"
    android:layout_height="match_parent"
    tools:context="rupesh.androidpracticaletwo.Activity.ActLoginRegister">
   <!-- <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"></include>
    </android.support.design.widget.AppBarLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="230dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="#70000000"
            android:layout_height="45dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@android:color/primary_text_dark"
                    android:background="@drawable/squearcorner_edittext"
                    android:drawableLeft="@drawable/ic_user"
                    android:hint="@string/hint_UserName"
                    android:inputType="text|textAutoComplete"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#70000000"
            android:layout_marginTop="10dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@android:color/primary_text_dark"
                    android:background="@drawable/squearcorner_edittext"
                    android:drawableLeft="@drawable/ic_pass"
                    android:hint="@string/hint_Password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonlayout"
            android:gravity="center"
            android:textColor="@android:color/primary_text_dark"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textIsSelectable="false" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="20dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_or"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/txt_Register"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="20dp"
            android:textStyle="normal|bold" />
    </LinearLayout>
</LinearLayout>